2012-07-26         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Extremely crude hack to get the value of
	ENABLE_NLS so that gettext will work in extensions.

	* readdir.c (dir_get_record): Call set_RT.
	(dir_can_take_file): Make parameter const.

	* testext.c (valrep2str): Add AWK_VALUE_COOKIE.

2012-07-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* readdir.c (dir_get_record): No need to set *errcode to 0.
	(dir_take_control_of): Remove some paranoia -- no need to test for
	NULL iobuf, and no need to check dir_can_take_file again.

2012-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* readdir.c: New file.
	* Makefile.am (readdir): New extension.

	* time.c: Fix all calls to update_ERRNO_string.

	* filefuncs.c, fnmatch.c, fork.c, ordchr.c, readfile.c, rwarray.c,
	time.c: Translate strings.

2012-07-20         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.3am, fnmatch.3am, ordchr.3am, readfile.3am:
	new files.

2012-07-16         Arnold D. Robbins     <arnold@skeeve.com>

	* fnmatch.c: Simplify flag table.

2012-07-15         Arnold D. Robbins     <arnold@skeeve.com>

	* testext.c (test_scalar): New function and new tests.
	(init_testext): Add a new variable.

2012-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (fill_stat_array): New function to do the work
	for stat.
	(do_stat): Call it.

2012-07-12         Arnold D. Robbins     <arnold@skeeve.com>

	* fnmatch.c: New file.
	* Makefile.am: Build fnmatch extension.
	* configure.ac: Look for fnmatch.h and fnmatch function.

	* fnmatch.c (init_fnmatch): Use sym_constant for FNM_NOMATCH.
	* testext.c (dl_load): Use sym_constant for answer_num.

	* testext.c (init_testext): Move extra code to here.
	(init_func): Change to point to init_testext.
	(dl_load): Deleted.
	(dl_load_func): Use the macro.

2012-07-11         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (array_set, do_stat): Use make_const_string.